--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shooting-website",
+  "name": "osgame-website",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://thanhdaibl1572002.github.io/osgame/",
